Initial vgg16_lcm_reg results on london tree dataset

--- a/amr_vgg16_lcm_reg.ipynb
+++ b/amr_vgg16_lcm_reg.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0fa20857",
+   "id": "2a01eade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0b809ec9",
+   "id": "42eadea1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "91b29bb0",
+   "id": "7a8ef885",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,36 +56,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9065ce4",
+   "cell_type": "markdown",
+   "id": "e4ed2ee3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "### Layer 3\n",
+    "\n",
+    "in:1024x1024x3\n",
+    "\n",
+    "out: 128x128x512\n",
+    "\n",
+    "### Layer 4\n",
+    "\n",
+    "in: 128x128x512\n",
+    "\n",
+    "out: 64x64x512\n",
+    "\n",
+    "### Layer 5\n",
+    "\n",
+    "in: 64x64x512\n",
+    "\n",
+    "out: 32x32x512"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ba27f964",
+   "id": "6dfe5ade",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Layer 3\n",
-    "in:1024x1024x3\n",
-    "out: 128x128x512\n",
-    "\n",
-    "Layer 4\n",
-    "in: 128x128x512\n",
-    "out: 64x64x512\n",
-    "\n",
-    "Layer 5\n",
-    "in: 64x64x512\n",
-    "out: 32x32x512\n",
-    "\"\"\"\n",
-    "\n",
     "def VGG_make_layers(cfg, in_channels=3, batch_norm=False, dilation=1):\n",
     "    d_rate = dilation\n",
     "    layers = []\n",
@@ -108,33 +109,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c29e9a8",
+   "id": "9b57956c",
    "metadata": {},
    "source": [
-    "## Scale aware module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "720f430d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Scale aware module\n",
+    "## Scale aware module\n",
     "\n",
-    "\"\"\"\n",
     "Enhance the multi-scale feature extraction capability of the network. Achieves multi-scale\n",
     "information enhancement only on a single layer feature map and performs this\n",
     "operation at different convolutional layers to bring rich information to subsequent regression modules.\n",
     "\n",
     "SAM first compresses the channel of feature map via 1×1 convolution. Afterwards, the compressed\n",
     "feature map is processed through dilated convolution with different expansion\n",
-    "ratios of 1, 2, 3 and 4 to perceive multi-scale features of heads. The extracted\n",
+    "ratios of 1, 2, 3 and 4 to perceive multi-scale features. The extracted\n",
     "multi-scale feature maps are fused via channel-wise concatenation operation and\n",
-    "3×3 convolution. The size of final feature map is consistent with the input one.\n",
-    "\"\"\"\n",
-    "\n",
+    "3×3 convolution. The size of final feature map is consistent with the input one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "364fbe65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class DC_layer(nn.Module):\n",
     "    \"\"\"\n",
     "    Direct counting layer\n",
@@ -201,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb969e7b",
+   "id": "5d1d0f0c",
    "metadata": {},
    "source": [
     "### Exploring Maxout function"
@@ -210,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "62dbc941",
+   "id": "289b4661",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e4340880",
+   "id": "0f95eef9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "74f29882",
+   "id": "65ba732e",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b576f98",
+   "id": "700b4eae",
    "metadata": {},
    "source": [
     "## Notes on 1x1 convolution\n",
@@ -323,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "375e9e5a",
+   "id": "7030afbf",
    "metadata": {},
    "source": [
     "## Count layer"
@@ -332,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f16bc42",
+   "id": "20e8bf7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "368c4311",
+   "id": "0994a0fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f87b8d5b",
+   "id": "83eb2013",
    "metadata": {},
    "source": [
     "## Activation functions\n",
@@ -478,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0e73b56a",
+   "id": "d7de3e9f",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6da7ec83",
+   "id": "b12a03c1",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d39d1042",
+   "id": "9fa00725",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,19 +551,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bd72cde",
+   "id": "865e8ecf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "class VGG16_LCM_REG(nn.Module):\n",
     "    def __init__(self, load_weights=False, stage_num=[3,3,3], count_range=patch_max, lambda_i=1., lambda_k=1.):\n",
     "        super(VGG16_LCM_REG, self).__init__()\n",
-    "        \n",
-    "\n",
-    "\n",
     "\n",
     "    def _initialize_weights(self):\n",
     "        for m in self.modules():\n",
