--- a/amr_vgg16_lcm_reg.ipynb
+++ b/amr_vgg16_lcm_reg.ipynb
@@ -2,11 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "2a01eade",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "from __future__ import absolute_import, print_function\n",
     "\n",
     "from collections import OrderedDict\n",
@@ -16,7 +19,140 @@
     "import torch.nn.functional as F\n",
     "from torchvision import models\n",
     "from test_config import cfg\n",
-    "import os"
+    "import os\n",
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e852ea5e",
+   "metadata": {},
+   "source": [
+    "# Load model, output stage metadata whilst predicting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2a44cb98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate root folder\n",
+    "path_lst = os.getcwd().split(os.sep)[:4]\n",
+    "path_lst[0] += os.sep\n",
+    "root_folder = os.path.join(*path_lst)\n",
+    "\n",
+    "# C3 and experiment folders\n",
+    "c3_folder = os.path.join(root_folder, 'C-3-Framework')\n",
+    "exp_folder = os.path.join(c3_folder, 'exp')\n",
+    "\n",
+    "# Append to sys.path\n",
+    "sys.path.append(c3_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "53b83faa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from test_classes import CvTest\n",
+    "from model_files.VGG16_LCM_REG import VGG16_LCM_REG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9cc10ad3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2022-02-16 09:10:02] === Experiment:202202080823_data=london_model=VGG16_LCM_REG_lr=1e-05 ===\n",
+      "[2022-02-16 09:10:02] model: VGG16_LCM_REG\n",
+      "[2022-02-16 09:10:02] CC: LCM\n",
+      "[2022-02-16 09:10:02] ===PAPER REVIEW VERSION===\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialise\n",
+    "exp = '202202080823_data=london_model=VGG16_LCM_REG_lr=1e-05'\n",
+    "\n",
+    "test = CvTest(\n",
+    "    exp=exp,\n",
+    "    net_object=VGG16_LCM_REG\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c095b042",
+   "metadata": {},
+   "source": [
+    "## Dissect logs, output arrays to .npy files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b205a7ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2022-02-16 09:05:48] x3:torch.Size([1, 512, 128, 128])\n",
+      "[2022-02-16 09:05:48] x4:torch.Size([1, 512, 64, 64])\n",
+      "[2022-02-16 09:05:48] x5:torch.Size([1, 512, 32, 32])\n",
+      "[2022-02-16 09:05:48] multifuse x5:torch.Size([1, 512, 32, 32])\n",
+      "[2022-02-16 09:05:48] multifuse x4:torch.Size([1, 512, 64, 64])\n",
+      "[2022-02-16 09:05:48] multifuse x3:torch.Size([1, 512, 128, 128])\n",
+      "[2022-02-16 09:05:48] count_layer x5_:torch.Size([1, 512, 16, 16])\n",
+      "[2022-02-16 09:05:48] p_layer x5:torch.Size([1, 3, 16, 16])\n",
+      "[2022-02-16 09:05:48] k_layer x5:torch.Size([1, 1, 16, 16])\n",
+      "[2022-02-16 09:05:48] i_layer x5:torch.Size([1, 3, 16, 16])\n",
+      "[2022-02-16 09:05:48] stage1_regress0: torch.Size([1, 16, 16])\n",
+      "[2022-02-16 09:05:48] stage1_regress1_0: torch.Size([1, 16, 16])\n",
+      "[2022-02-16 09:05:48] stage1_regress1_1: torch.Size([1, 16, 16])\n",
+      "[2022-02-16 09:05:48] stage1_regress1_2: torch.Size([1, 16, 16])\n",
+      "[2022-02-16 09:05:48] stage1_regress2: torch.Size([1, 1, 16, 16])\n",
+      "[2022-02-16 09:05:48] stage1_regress3: torch.Size([1, 1, 16, 16])\n",
+      "[2022-02-16 09:05:48] [i:1][filename:00_02_51.56213176_-0.16479492_19_1024_1024.jpg][mae: 49.6][gt: 108.3][pred: 157.9]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[img_raw: (1024, 1024)]\n",
+       "[img: torch.Size([1, 3, 1024, 1024])]\n",
+       "[gt_raw: (1024, 1024)]\n",
+       "[gt: (1, 16, 16)]\n",
+       "[pred_map: (16, 16)]\n",
+       "[pred_map_resize: (128, 128)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generate prediction\n",
+    "test.pred(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7ecf2b0",
+   "metadata": {},
+   "source": [
+    "# Notes"
    ]
   },
   {
@@ -514,6 +650,40 @@
    "source": [
     "x[:, 0, :, :].shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f46cb4da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['G:',\n",
+       " 'My Drive',\n",
+       " 'computer_vision',\n",
+       " 'code',\n",
+       " 'paper_reviews',\n",
+       " 'adaptive_mixture_regression']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.normpath(os.getcwd()).split(os.sep)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc7d1b8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
